Changes after code review